Convert DuplicateContentFinder return value to stream
This enables later processors to process earlier DuplicateContentFinder results while it is still working